# build-opencv

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-NOTICES  opencv_libavif.patch
.github/workflows/: build.yml
patch/: x64-windows.cmake
scripts/: build-openblas.sh  build-test.ps1  build-test.sh  build.ps1  build.sh  create-patch.sh
test/: CMakeLists.txt  watershed.cc
